k8s/apps/it-tools/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: it-tools
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app.kubernetes.io/name: it-tools
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: it-tools
  template:
    metadata:
      labels:
        app.kubernetes.io/name: it-tools
    spec:
      containers:
        - name: it-tools
          image: corentinth/it-tools:2024.10.22-7ca5933@sha256:8b8128748339583ca951af03dfe02a9a4d7363f61a216226fc28030731a5a61f
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  selector:
    app.kubernetes.io/name: it-tools
  ports:
    - port: 80
      targetPort: 80
      name: http
