k8s/apps/it-tools/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  namespace: it-tools
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "IT Tools"
    gethomepage.dev/description: "Collection of handy online tools"
    gethomepage.dev/group: "tools"
    gethomepage.dev/icon: "it-tools.png"
    gethomepage.dev/href: "https://it-tools.item.fyi"
    gethomepage.dev/siteMonitor: "http://it-tools.it-tools.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=it-tools"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`it-tools.item.fyi`)
      services:
        # Routed through the KEDA HTTP add-on interceptor, which buffers
        # requests while the app scales up from zero (keda.yaml in this dir).
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
  tls: {}
